# skills-mgr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  claude-code-review.yml  claude-interactive.yml  claude-review.yml  release.yml
crates/skills-cli/: Cargo.toml
crates/skills-cli/src/: main.rs
crates/skills-cli/src/commands/: agent.rs  discover.rs  global.rs  mod.rs  profile.rs  project.rs  skill.rs  status.rs  util.rs
crates/skills-core/: Cargo.toml
crates/skills-core/assets/: skills-mgr-guide.md
crates/skills-core/src/: config.rs  db.rs  discovery.rs  frontmatter.rs  hub_feed.rs  lib.rs  logging.rs  placements.rs  presets.rs  profiles.rs  provider.rs  provider_registry.rs  registry.rs  remote.rs
crates/skills-core/src/entity/: mod.rs  operation_log.rs  placement_profiles.rs  placements.rs  project_agents.rs  project_linked_profiles.rs  project_profiles.rs  projects.rs
crates/skills-gui/: components.json  package.json  pnpm-lock.yaml
crates/skills-gui/src/: App.css  App.tsx
crates/skills-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/skills-gui/src-tauri/icons/: icon.icns
crates/skills-gui/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/skills-gui/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  label.tsx  sheet.tsx  switch.tsx  table.tsx  tag-input.tsx
crates/skills-gui/src/layouts/: AppLayout.tsx
crates/skills-gui/src/lib/: api.ts  format.ts  schemas.ts  theme.ts  theme.tsx
crates/skills-gui/src/pages/: ActivityLog.tsx  Agents.tsx  Dashboard.tsx  Profiles.tsx  Projects.tsx  Settings.tsx  Skills.tsx
crates/skills-gui/src/pages/profiles/: ProfileCompositionBlock.tsx  ProfileDetailSheet.tsx  ProfileEditForm.tsx  ProfileIncludesList.tsx  ProfileSkillsList.tsx  ProfileUsedBySection.tsx  useProfileResolution.ts
crates/skills-gui/src/pages/projects/: ProjectDetailSheet.tsx  ProjectEditForm.tsx  ProjectLinkedProfilesList.tsx  ProjectPlacementsBlock.tsx  ProjectRecentActivity.tsx
crates/skills-mcp/: Cargo.toml
crates/skills-mcp/src/: lib.rs
designs/: skills-mgr-ui.pen
docs/superpowers/plans/: 2026-03-11-skills-mgr-implementation.md  2026-03-14-skill-delegation.md
docs/superpowers/specs/: 2026-03-11-skills-mgr-design.md
