[workspace]
resolver = "2"
members = [
    "crates/skills-core",
    "crates/skills-cli",
    "crates/skills-mcp",
    "crates/skills-gui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
