[package]
name = "skills-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dirs = "6"

[dev-dependencies]
tempfile = "3"
