[package]
name = "skills-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dirs = "6"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sea-orm.workspace = true
tokio.workspace = true
reqwest.workspace = true
tar.workspace = true
flate2.workspace = true
url.workspace = true
tempfile.workspace = true
tracing.workspace = true
zip.workspace = true
